--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "compat": "npx projen compat",
     "compile": "npx projen compile",
     "default": "npx projen default",
-    "docgen": "npx projen docgen",
     "eject": "npx projen eject",
     "eslint": "npx projen eslint",
     "package": "npx projen package",
@@ -35,20 +34,21 @@
   },
   "devDependencies": {
     "@types/jest": "^27",
-    "@types/node": "^16 <= 16.18.78",
+    "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
+    "aws-cdk-lib": "2.135.0",
+    "constructs": "10.3.0",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^27",
     "jest-junit": "^15",
-    "jsii": "1.x",
+    "jsii": "~5.4.0",
     "jsii-diff": "^1.96.0",
-    "jsii-docgen": "^10.3.26",
     "jsii-pacmak": "^1.96.0",
-    "jsii-rosetta": "1.x",
-    "projen": "^0.80.15",
+    "jsii-rosetta": "~5.4.0",
+    "projen": "^0.82.3",
     "standard-version": "^9",
     "ts-jest": "^27",
     "typescript": "^3.9.10"
@@ -57,25 +57,21 @@
     "aws-cdk-lib": "^2.135.0",
     "constructs": "^10.3.0"
   },
-  "dependencies": {
-    "aws-cdk-lib": "^2.135.0",
-    "constructs": "^10.3.0"
-  },
-  "overrides": {
-    "@types/babel__traverse": "7.18.2",
-    "@types/prettier": "2.6.0"
-  },
   "keywords": [
     "cdk"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "testMatch": [
       "<rootDir>/**/*.test.ts",
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
