--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 18.x
       - name: Install dependencies
         run: npm install
-        with: 
+        env: 
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
       - name: build
         run: npx projen build
