--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Install dependencies
-        run: npm install
-        with:
+        env:
           NPM_TOKEN: ${{secrets-NPM_TOKEN}}
+        run: npm install
       - name: build
         run: npx projen build
       - name: Find mutations
