--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
       - name: Install dependencies
         env:
-          NPM_TOKEN: ${{secrets-NPM_TOKEN}}
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
         run: npm install
       - name: build
         run: npx projen build
