--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
+    "registry": "https://npmjs.com/",
     "access": "public"
   },
   "version": "0.0.0",
