--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,6 @@
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
 /LICENSE linguist-generated
-/package-lock.json linguist-generated
 /package.json linguist-generated
 /tsconfig.dev.json linguist-generated
+/yarn.lock linguist-generated
