--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 18.x
       - name: Install dependencies
-        run: npm install
+        run: yarn install --check-files
       - name: build
         run: npx projen build
       - name: Find mutations
@@ -106,7 +106,7 @@ jobs:
       - name: Prepare Repository
         run: mv dist .repo
       - name: Install Dependencies
-        run: cd .repo && npm ci
+        run: cd .repo && yarn install --check-files --frozen-lockfile
       - name: Create js artifact
         run: cd .repo && npx projen package:js
       - name: Collect js Artifact
