--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "jest": "^27",
     "jest-junit": "^15",
     "jsii": "~5.4.0",
-    "jsii-diff": "^1.96.0",
-    "jsii-pacmak": "^1.96.0",
+    "jsii-diff": "^1.100.0",
+    "jsii-pacmak": "^1.100.0",
     "jsii-rosetta": "~5.4.0",
-    "projen": "^0.82.3",
+    "projen": "^0.82.6",
     "standard-version": "^9",
     "ts-jest": "^27",
-    "typescript": "^3.9.10"
+    "typescript": "4.9.5"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.146.0",
